syntax = "proto3";

package istio.mixer.adapter.sample.quota;

import "mixer/adapter/model/v1beta1/extensions.proto";
import "policy/v1beta1/type.proto";

option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_QUOTA;

message Template {
    map<string, istio.policy.v1beta1.Value> dimensions = 1;
    map<string, bool> boolMap = 2;
    Res1 res1 = 11;
}

message Res1 {
    istio.policy.v1beta1.Value value = 1;
    map<string, istio.policy.v1beta1.Value> dimensions = 2;

    int64 int64Primitive = 3;

    bool boolPrimitive = 4;

    double doublePrimitive = 5;

    string stringPrimitive = 6;

    map<string, int64> int64Map = 7;

    istio.policy.v1beta1.TimeStamp timeStamp = 9;

    istio.policy.v1beta1.Duration duration = 10;

    Res2 res2 = 11;

    map<string, Res2> res2_map = 12;
}

message Res2 {
    istio.policy.v1beta1.Value value = 1;
    map<string, istio.policy.v1beta1.Value> dimensions = 2;

    int64 int64Primitive = 3;
}
